syntax = "proto3";

package admin;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "party_affairs_news_classify.proto";
import "party_affairs_news.proto";
import "party_affairs_resource_classify.proto";
import "party_affairs_resource.proto";
import "party_affairs_banner.proto";
import "party_affairs_task.proto";
import "party_affairs_task_value.proto";
service Service {

  rpc AllNewsClassify (google.protobuf.Empty) returns (AllNewsClassifyReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/news/classify",
      additional_bindings {
        get: "/party-affairs/client/v1/news/classify",
      },
    };
  }

  rpc AddNewsClassify (AddNewsClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/admin/v1/news/classify",
      body: "*"
    };
  }

  rpc UpdateNewsClassify (UpdateNewsClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/admin/v1/news/classify",
      body: "*"
    };
  }

  rpc DeleteNewsClassify (DeleteNewsClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/news/classify"
    };
  }

  rpc PageNewsContent (PageNewsRequest) returns (PageNewsReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/news/contents",
      additional_bindings {
        get: "/party-affairs/client/v1/news/contents"
      },
    };
  }

  rpc GetNewsContent (GetNewsRequest) returns (News) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/news/content",
      additional_bindings {
        get: "/party-affairs/client/v1/news/content",
      },
    };
  }

  rpc AddNews (AddNewsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/admin/v1/news/content",
      body: "*"
    };
  }

  rpc UpdateNews (UpdateNewsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/admin/v1/news/content",
      body: "*"
    };
  }

  rpc DeleteNews (DeleteNewsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/news/content"
    };
  }

  rpc AllResourceClassify (google.protobuf.Empty) returns (AllResourceClassifyReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/resource/classify",
      additional_bindings {
        get: "/party-affairs/client/v1/resource/classify",
      },
    };
  }

  rpc AddResourceClassify (AddResourceClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/admin/v1/resource/classify",
      body: "*"
    };
  }

  rpc UpdateResourceClassify (UpdateResourceClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/admin/v1/resource/classify",
      body: "*"
    };
  }

  rpc DeleteResourceClassify (DeleteResourceClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/resource/classify"
    };
  }

  rpc PageResourceContent (PageResourceRequest) returns (PageResourceReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/resource/contents",
      additional_bindings {
        get: "/party-affairs/client/v1/resource/contents",
      },
    };
  }

  rpc GetResourceContent (GetResourceRequest) returns (Resource) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/resource/content",
      additional_bindings {
        get: "/party-affairs/client/v1/resource/content",
      },
    };
  }

  rpc AddResourceContent (AddResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/admin/v1/resource/content",
      body: "*"
    };
  }

  rpc UpdateResourceContent (UpdateResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/admin/v1/resource/content",
      body: "*"
    };
  }

  rpc DeleteResourceContent (DeleteResourceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/resource/content"
    };
  }

  rpc AllBanner (google.protobuf.Empty) returns (AllBannerReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/banners",
      additional_bindings {
        get: "/party-affairs/client/v1/banners"
      },
    };
  }

  rpc AddBanner (AddBannerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/admin/v1/banner",
      body: "*"
    };
  }

  rpc UpdateBanner (UpdateBannerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/admin/v1/banner",
      body: "*"
    };
  }

  rpc DeleteBanner (DeleteBannerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/banner"
    };
  }

  rpc PageTask (PageTaskRequest) returns (PageTaskReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/tasks",
      additional_bindings {
        get: "/party-affairs/client/v1/tasks"
      },
    };
  }

  rpc GetTask (GetTaskRequest) returns (Task) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/task",
      additional_bindings {
        get: "/party-affairs/client/v1/task",
      },
    };
  }

  rpc AddTask (AddTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/admin/v1/task",
      body: "*"
    };
  }

  rpc UpdateTask (UpdateTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/admin/v1/task",
      body: "*"
    };
  }

  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/task"
    };
  }

  rpc PageTaskValue (PageTaskValueRequest) returns (PageTaskValueReply) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/task/values",
    };
  }

  rpc GetTaskValue (GetTaskValueRequest) returns (TaskValue) {
    option (google.api.http) = {
      get: "/party-affairs/admin/v1/task/value",
      additional_bindings {
        get: "/party-affairs/client/v1/task/value",
      },
    };
  }

  rpc AddTaskValue (AddTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/party-affairs/client/v1/task/value",
      body: "*"
    };
  }

  rpc UpdateTaskValue (UpdateTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/party-affairs/client/v1/task/value",
      body: "*"
    };
  }

  rpc DeleteTaskValue (DeleteTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/party-affairs/admin/v1/task/value"
    };
  }
}


